@@ -1,0 +1,145 @@
+-- phpMyAdmin SQL Dump
+-- version 5.2.1deb3
+-- https://www.phpmyadmin.net/
+--
+-- Host: localhost:3306
+-- Generation Time: Aug 30, 2024 at 06:53 PM
+-- Server version: 8.0.39-0ubuntu0.24.04.2
+-- PHP Version: 8.3.6
+
+SET SQL_MODE = "NO_AUTO_VALUE_ON_ZERO";
+START TRANSACTION;
+SET time_zone = "+00:00";
+
+
+/*!40101 SET @OLD_CHARACTER_SET_CLIENT=@@CHARACTER_SET_CLIENT */;
+/*!40101 SET @OLD_CHARACTER_SET_RESULTS=@@CHARACTER_SET_RESULTS */;
+/*!40101 SET @OLD_COLLATION_CONNECTION=@@COLLATION_CONNECTION */;
+/*!40101 SET NAMES utf8mb4 */;
+
+--
+-- Database: `bus`
+--
+
+-- --------------------------------------------------------
+
+--
+-- Table structure for table `admin`
+--
+
+CREATE TABLE `admin` (
+  `Email` varchar(255) NOT NULL,
+  `Name` varchar(20) DEFAULT NULL,
+  `Password` varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+--
+-- Dumping data for table `admin`
+--
+
+INSERT INTO `admin` (`Email`, `Name`, `Password`) VALUES
+('admin@mail.com', 'Admin', '1234');
+
+-- --------------------------------------------------------
+
+--
+-- Table structure for table `pass`
+--
+
+CREATE TABLE `pass` (
+  `AdmissionId` int DEFAULT NULL,
+  `FromPlace` varchar(20) DEFAULT NULL,
+  `Validity` int DEFAULT NULL,
+  `UKey` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci DEFAULT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+--
+-- Dumping data for table `pass`
+--
+
+INSERT INTO `pass` (`AdmissionId`, `FromPlace`, `Validity`, `UKey`) VALUES
+(9999, 'Cherkala', 1725907404, '3e544a86-5c14-43f0-8c9d-9aa2856142f1');
+
+-- --------------------------------------------------------
+
+--
+-- Table structure for table `place`
+--
+
+CREATE TABLE `place` (
+  `Place` varchar(30) NOT NULL,
+  `Price` int UNSIGNED DEFAULT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+--
+-- Dumping data for table `place`
+--
+
+INSERT INTO `place` (`Place`, `Price`) VALUES
+('Cherkala', 20),
+('Kasaragod', 25);
+
+-- --------------------------------------------------------
+
+--
+-- Table structure for table `student`
+--
+
+CREATE TABLE `student` (
+  `AdmissionId` int NOT NULL,
+  `Name` varchar(20) DEFAULT NULL,
+  `Email` varchar(255) DEFAULT NULL,
+  `Photo` varchar(50) DEFAULT NULL,
+  `Department` varchar(30) DEFAULT NULL,
+  `Password` varchar(20) DEFAULT NULL
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+--
+-- Dumping data for table `student`
+--
+
+INSERT INTO `student` (`AdmissionId`, `Name`, `Email`, `Photo`, `Department`, `Password`) VALUES
+(9999, 'Deekshith', 'test@mail.com', '9999', 'computer-engineering', '1234');
+
+--
+-- Indexes for dumped tables
+--
+
+--
+-- Indexes for table `admin`
+--
+ALTER TABLE `admin`
+  ADD PRIMARY KEY (`Email`);
+
+--
+-- Indexes for table `pass`
+--
+ALTER TABLE `pass`
+  ADD KEY `AdmissionId` (`AdmissionId`);
+
+--
+-- Indexes for table `place`
+--
+ALTER TABLE `place`
+  ADD PRIMARY KEY (`Place`);
+
+--
+-- Indexes for table `student`
+--
+ALTER TABLE `student`
+  ADD PRIMARY KEY (`AdmissionId`);
+
+--
+-- Constraints for dumped tables
+--
+
+--
+-- Constraints for table `pass`
+--
+ALTER TABLE `pass`
+  ADD CONSTRAINT `pass_ibfk_1` FOREIGN KEY (`AdmissionId`) REFERENCES `student` (`AdmissionId`);
+COMMIT;
+
+/*!40101 SET CHARACTER_SET_CLIENT=@OLD_CHARACTER_SET_CLIENT */;
+/*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;
+/*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;
