@@ -6,19 +6,24 @@ CREATE TABLE student(
     Email VARCHAR(255),
     Photo VARCHAR(50),
     Department VARCHAR(30),
-    Pass VARCHAR(20)
+    Password VARCHAR(20)
 );
 
 CREATE TABLE admin(
     Email VARCHAR(255) PRIMARY KEY,
     Name VARCHAR(20),
-    Pass VARCHAR(20)
+    Password VARCHAR(20)
 );
 
 CREATE TABLE pass(
     AdmissionId INT,
     FromPlace VARCHAR(20),
     Validity INT,
-    UKey VARCHAR(20),
+    UKey VARCHAR(255),
     FOREIGN KEY(AdmissionId) REFERENCES student(AdmissionId)
+);
+
+CREATE TABLE place(
+    Place VARCHAR(30) PRIMARY KEY,
+    Price int UNSIGNED
 );
