@@ -85,6 +85,9 @@
                 <td>Ticket Id</td>
                 <td>{{ticketid}}</td>
             </tr>
+            <tr>
+                <td colspan="2"><a href="/student/renew">Extend Pass</a></td>
+            </tr>
         </table>
     </div>
 </body>
